tests/generate/snapshots/r#mod__generate__generate_with_group_profile@components__controller.md.snap
---
source: tests/generate/mod.rs
expression: input
input_file: tests/test-result/.tmpgBMh7b/components/controller.md
---
---
title: OpenTalk Controller Community Edition
---

<!--
This file is generated by retoki. Do not edit it manually; any changes will be
overwritten the next time the release documentation is generated.
-->
# OpenTalk Controller Community Edition version history


---

# controller v0.18.0


(found in OpenTalk [**v25.0.0**](../25.0.0/README.md))

## Changelog

### New Features
---

# controller v0.16.1-1


(found in OpenTalk [**v24.8.1**](../24.8.1/README.md))

## Changelog

### Ci
---

# controller v0.16.1



## Changelog

### Bug fixes
---

# controller v0.16.0


(found in OpenTalk [**v24.8.0**](../24.8.0/README.md))

## Changelog

### Docs
